# competitor-intel-engine

./: .gitignore  .replit  jobs.db  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted--main-py-Competitor-Intelligence-Engine-Strong-Single-F_1770155424107.txt  Pasted--main-py-Competitor-Intelligence-Engine-WITH-PERSISTENT_1770161824264.txt
static/: app.js  dashboard.html  index.html  login.html  signup.html  styles.css
