[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.16.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
]
